# faster-data-generation

examples/rsfake-v2/: Cargo.toml  schema-full.json
examples/rsfake-v2/src/: extract.rs  generate.rs  main.rs
