[package]
name = "rsfake"
version = "0.0.1"
edition = "2021"

[features]
default = ["chrono", "random_color", "http",  "uuid", "rust_decimal", "bigdecimal"]
chrono = []
random_color = []
http = []
uuid = []
rust_decimal = []
bigdecimal = []

[dependencies]
fake = { version = "2.9.2", features = ["derive", "chrono", "random_color", "http",  "uuid", "rust_decimal", "bigdecimal"] }

rust_decimal = { version = "1.35.0" }
bigdecimal = { version = "0.4.3" }

chrono = { version = "0.4.38" }
clap = { version = "4.4" , default-features = false, features = ["std", "env", "help"]}

serde = "1.0.136"
serde_json = "1.0.108"
rayon = "1.8"
polars = { version = "0.35", features = ["parquet"] }
uuid = { version = "1.8.0", features = ["v4"] }

[profile.release]
opt-level = 3
