[package]
name = "rsfake"
version = "0.0.1"
edition = "2021"

[features]
default = ["chrono", "random_color", "http",  "uuid", "rust_decimal", "bigdecimal"]
chrono = ["fake/chrono", "dep:chrono"]
random_color = ["fake/random_color"]
http = ["fake/http"]
uuid = ["fake/uuid", "dep:uuid"]
rust_decimal = ["fake/rust_decimal", "dep:rust_decimal"]
bigdecimal = ["fake/bigdecimal", "dep:bigdecimal"]

[dependencies]
fake = { version = "2.9.2", features = ["derive"] }

bigdecimal = { version = "0.4.3", optional = true}
chrono = { version = "0.4.38", optional = true }
clap = { version = "4.4" , default-features = false, features = ["std", "env", "help"]}
polars = { version = "0.40", features = ["parquet", "json", "csv"] }
rayon = "1.8"
rust_decimal = { version = "1.35.0", optional = true}
serde = "1.0.136"
serde_json = "1.0.108"
uuid = { version = "1.8.0", features = ["v4"], optional = true }

[profile.release]
opt-level = 3
